[CI] fix type job need dependency

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -79,7 +79,7 @@ jobs:
     runs-on: ubuntu-24.04
     name: Publish release
     needs:
-      - build-reelase
+      - build-release
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
